# curp

./: .gitignore  README.md  curp.py  pyproject.toml  try_curp.py  validate_curp_algo.py
