[tool.poetry]
name = "curp"
version = "0.1.0"
description = ""
authors = ["Ren Campos <renato.campos@storicard.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
unidecode = "^1.3.8"
pandas = "^2.2.2"
rich = "^13.7.1"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
